[package]
name = "nperf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.14", features = ["derive"] }
clap-markdown = "0.1.3"
core_affinity = "0.8.1"
env_logger = "0.10.1"
libc = "0.2.152"
log = "0.4.20"
serde = { version = "1.0.159" , features = ["derive"] }
serde_json = "1.0.96"

[dev-dependencies]
assert_cmd = "2.0.13"

[profile.release]
debug = true
